--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,5 +1,5 @@
 .header {
-    background-image: url("C:\Users\aleks\Desktop\beauty-world\my-app\src\images\background.svg");
+    background-image: url("../../images/background.svg");
     background-size: cover;
     display: flex;
     width: 100%;
@@ -28,6 +28,7 @@
     display: flex;
     flex-direction: row;
     gap: 28px;
+    cursor: pointer;
 
 }
 
